--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,17 @@
 
 /* Your CSS Code here. */
 <style>
-    #btn:hover {
-        background-color: yellow;
-        color: black;
-        border-radius: 30px;
-    }
-</style>
+#btn {
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  transition: all 0.2s ease-in-out;
+}
+
+#btn:hover {
+  background-color: yellow;
+  color: black;
+  border-radius: 30px;
+}
