--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
   color: white;
   border: none;
   border-radius: 5px;
-  padding: 10px 20px;
-  transition: all 0.2s ease-in-out;
+/*   padding: 10px 20px;
+  transition: all 0.2s ease-in-out; */
 }
 
 #btn:hover {
