--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 #btn {
   background-color: black;
   color: white;
-  border: none;
+/*   border: none; */
   border-radius: 5px;
 /*   padding: 10px 20px;
   transition: all 0.2s ease-in-out; */
