--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@
 #btn {
   background-color: black;
   color: white;
-/*   border: none; */
+  border: none;
   border-radius: 5px;
-/*   padding: 10px 20px;
-  transition: all 0.2s ease-in-out; */
+padding: 10px 20px;
+  transition: background-color 0.3s, color 0.3s, border-radius 0.3s;
 }
 
 #btn:hover {
