--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
   border: none;
   border-radius: 5px;
 padding: 10px 20px;
-  transition: background-color 0.3s, color 0.3s, border-radius 0.3s;
+/*   transition: background-color 0.3s, color 0.3s, border-radius 0.3s; */
 }
 
 #btn:hover {
